--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+        
+#gradient-canvas {
+  width:100%;
+  height:100%;
+  --gradient-color-1: #043D5D; 
+  --gradient-color-2: #032E46; 
+  --gradient-color-3: #23B684;  
+  --gradient-color-4: #0F595E;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
