--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,14 +14,19 @@ a {
 * {
   box-sizing: border-box;
 }
-        
-#gradient-canvas {
-  width:100%;
-  height:100%;
-  --gradient-color-1: #043D5D; 
-  --gradient-color-2: #032E46; 
-  --gradient-color-3: #23B684;  
-  --gradient-color-4: #0F595E;
+
+.phone{
+  z-index: -1;
+}
+.mobile{
+  z-index: 1;
+  margin-top: 6em;
+  margin-left: 14vw;
+  max-width: 58vw;
+  background-color: red;
+}
+.desktop{
+  background-color: green;
 }
 
 @media (prefers-color-scheme: dark) {
